--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,13 +4,11 @@
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
       <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+      <text class="userinfo-nickname">无为徐生</text>
     </block>
   </view>
   <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+    <text class="user-motto">书法练习轨迹</text>
   </view>
-  <view class='go-home' bindtap='goHome' style='display:none;'>
-    前往前端开发博客
-  </view>
+  
 </view>
