--- a/app.wxss
+++ b/app.wxss
@@ -1,21 +1,19 @@
 /**app.wxss**/
-
 .container {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   box-sizing: border-box;
+} 
+
+.content {
+  width: 100%;
+  background: #f4f8fb;
 }
 
-#header {
-  margin-bottom: 0;
-  border-bottom: 1px solid #e6e6eb;
-  background: #fafafa;
-  height: 50px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+.post-list {
+  margin: 12rpx 24rpx 44rpx;
 }
+
+
