--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -124,3 +124,11 @@
   background-color: #f9f2f4;
   border-radius: 3px;
 }
+
+.post-abstract {
+  padding: 10rpx 10rpx;
+  line-height: 18px;
+  color: #666;
+  font-size: 15px;
+  margin: 0;
+}
