--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -5,7 +5,7 @@
       <text selectable="true">{{content}}</text>
     </view>
     <view class="detail-content"><text> </text> </view>
-    <view class="detail-content" wx:for="{{imgs}}" wx:for-item="img" wx:for-index="i" wx:key="i">
+    <view class="imagesize" wx:for="{{imgs}}" wx:for-item="img" wx:for-index="i" wx:key="i">
           <image src="{{img}}" mode="aspectFit" bindtap="enlarge" data-src="{{img}}" data-list="{{imgs}}"></image>
     </view>
   </view>
