--- a/pages/article/article.wxml
+++ b/pages/article/article.wxml
@@ -7,6 +7,11 @@
 2020年9月20日
 </view>
 <view class='article-content'>
-    人情必有所寄，习惯而成自然。练着练着，书法就成了生活的一部分，记录书法练习轨迹更是有趣有意思的点缀。不能说是点缀，于我而言，练字与记录是相辅相成、缺一不可的关系。
+    人情必有所寄，习惯而成自然。练着练着，书法就成了生活的一部分，记录书法练习轨迹更是有趣有意思的点缀。
 </view>
+<view class='article-content'>
+    不能说是点缀，于我而言，练字与记录是相辅相成、缺一不可的关系。
+</view>
+
+
 </view>
