--- a/pages/article2/article.wxml
+++ b/pages/article2/article.wxml
@@ -6,12 +6,35 @@
 <view class='article-time'>
     2021年8月
 </view>
+
+<view class='wrap'></view>
 <view class='article-content'>
-    无为有为，徐生长生。
-</view>
-<view class='article-content'>
-    人生在世，有所作为，文化长生，思想永恒。
+无为是本人老家，安徽无为，风景秀丽，历史悠久。
 </view>
 
+<view class='wrap'></view>
+<view class='article-content'>
+无为也是一种道家思想，顺其自然，因时而行。
+</view>
+
+<view class='wrap'></view>
+<view class='article-content'>
+摒弃妄自作为，远祸慎行，追求朴素节俭、清静寡欲的境界。
+</view>
+
+<view class='wrap'></view>
+<view class='article-content'>
+徐是本人的姓，男生，所谓斯文有礼谓之生，故名徐生。
+</view>
+
+<view class='wrap'></view>
+<view class='article-content'>
+综上种种，得名-无为徐生，希冀无为有为，徐生长生。
+</view>
+
+<view class='wrap'></view>
+<view class='article-content'>
+人生在世，有所作为，文化长生，思想永恒。
+</view>
 
 </view>
