--- a/pages/article3/article.wxml
+++ b/pages/article3/article.wxml
@@ -7,7 +7,29 @@
 2022年3月
 </view>
 <view class='article-content'>
-    书法练习轨迹、无为徐生、徐书法，三位一体，循序渐进，成就我的书法练习之路。
+学以致用，见贤而思齐。徐书法含义有三： 
 </view>
+
+<view class='wrap'></view>
+<view class='article-content'>
+一、表示是徐生的书法，徐某人的书法。
+</view>
+
+<view class='wrap'></view>
+<view class='article-content'>
+二、人生如练字，需要不疾不徐，不骄不躁。提醒自己要慢下来，静下去。
+</view>
+
+<view class='wrap'></view>
+<view class='article-content'>
+三、古有“书圣”“颜体”，高山仰止，今有“徐书法”见贤思齐。十年如一日，徐徐练习，徐书必有法。
+</view>
+
+<view class='wrap'></view>
+<view class='wrap'></view>
+<view class='article-content'>
+书法练习轨迹、无为徐生、徐书法，三位一体，循序渐进，成就我的书法练习之路。
+</view>
+
 
 </view>
